carousel fix for layout blow out - white space, fixed with overflow hidden

--- a/client/app/main/carousel.scss
+++ b/client/app/main/carousel.scss
@@ -6,6 +6,9 @@
   @media (min-width: $screen-md) {
     display: block;
     margin: $margin-md 0;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
   }
   .carousel-caption {
     left: 0;
